<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.garymcgowan.moviepedia.view.details.MovieDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="start"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom"
            app:expandedTitleMarginBottom="5dp"
            app:expandedTitleMarginStart="50dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:maxLines="4">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.garymcgowan.moviepedia.view.details.MovieDetailsActivity">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/ratedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="NOT RATED"
                />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="90 mins"
                />

            <TextView
                android:id="@+id/plotTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/runtimeTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratedTextView"
                android:paddingBottom="8dp"
                tools:text="long movie text"
                />

            <ImageView
                android:id="@+id/posterImageView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:paddingEnd="16dp"
                android:contentDescription="@string/contentDescriptionPoster"
                android:scaleType="fitStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plotTextView"
                tools:src="@color/bg_grey"
                />

            <!--RATING-->
            <TextView
                android:id="@+id/labelRating"
                style="@style/DetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toTopOf="@+id/posterImageView"
                />

            <TextView
                android:id="@+id/ratingTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/labelRating"
                tools:text="7.0/10"
                />


            <!--DIRECTOR-->
            <TextView
                android:id="@+id/labelDirector"
                style="@style/DetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/detail_director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
                />

            <TextView
                android:id="@+id/directorTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/labelDirector"
                tools:text="person"
                />

            <!--ACTORS-->
            <TextView
                android:id="@+id/labelActors"
                style="@style/DetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/detail_actors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/directorTextView"
                />

            <TextView
                android:id="@+id/actorsTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/labelActors"
                tools:text="actors"
                />

            <!--WRITER-->
            <TextView
                android:id="@+id/labelWriter"
                style="@style/DetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/detail_writer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/actorsTextView"
                />

            <TextView
                android:id="@+id/writerTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/labelWriter"
                tools:text="writers"
                />

            <!--AWARDS-->
            <TextView
                android:id="@+id/labelAwards"
                style="@style/DetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/detail_awards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/writerTextView"
                />

            <TextView
                android:id="@+id/awardsTextView"
                style="@style/DetailsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterImageView"
                app:layout_constraintTop_toBottomOf="@+id/labelAwards"
                tools:text="awards"
                />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
